--- a/JuliansGame/proj.win32/JuliansGame.vcxproj.filters
+++ b/JuliansGame/proj.win32/JuliansGame.vcxproj.filters
@@ -27,7 +27,13 @@
     <ClCompile Include="..\Classes\EnemyCB.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Worker.cpp">
+    <ClCompile Include="..\Classes\GameLayer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Bullet.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\GameController.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
@@ -47,7 +53,13 @@
     <ClInclude Include="..\Classes\EnemyCB.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Worker.h">
+    <ClInclude Include="..\Classes\GameController.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\GameLayer.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Bullet.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
