changes for android

--- a/JuliansGame/proj.win32/JuliansGame.vcxproj.filters
+++ b/JuliansGame/proj.win32/JuliansGame.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="..\Classes\GameController.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\stdReplacer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -60,6 +63,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Bullet.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\stdReplacer.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
