--- a/JuliansGame/proj.win32/JuliansGame.vcxproj.filters
+++ b/JuliansGame/proj.win32/JuliansGame.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="..\Classes\stdReplacer.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\MainMenu.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -66,6 +69,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\stdReplacer.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\MainMenu.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
