--- a/JuliansGame/proj.win32/JuliansGame.vcxproj
+++ b/JuliansGame/proj.win32/JuliansGame.vcxproj
@@ -145,6 +145,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\MainMenu.cpp" />
     <ClCompile Include="..\Classes\Player.cpp" />
+    <ClCompile Include="..\Classes\ryCast.cpp" />
     <ClCompile Include="..\Classes\stdReplacer.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
@@ -157,6 +158,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\MainMenu.h" />
     <ClInclude Include="..\Classes\Player.h" />
+    <ClInclude Include="..\Classes\ryCast.h" />
     <ClInclude Include="..\Classes\stdReplacer.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
