--- a/JuliansGame/proj.win32/JuliansGame.vcxproj.filters
+++ b/JuliansGame/proj.win32/JuliansGame.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\Classes\MainMenu.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ryCast.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -72,6 +75,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\MainMenu.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ryCast.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
