--- a/JuliansGame/proj.android/AndroidManifest.xml
+++ b/JuliansGame/proj.android/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-sdk android:minSdkVersion="9"/>
     <uses-feature android:glEsVersion="0x00020000" />
 
-    <application android:label="@string/app_name"
+    <application android:label="@string/app_name2"
                  android:icon="@drawable/indian">
 					 
         <!-- Tell Cocos2dxActivity the name of our .so -->
